# thalimage

./: .dir-locals.el  CLAUDE.md  Makefile  README.md  check.sh  thalimage-dev.el
backend/: pyproject.toml
backend/src/thalimage/: __init__.py  __main__.py  app.py  config.py  deps.py
backend/src/thalimage/api/: collections.py  elo.py  images.py  settings.py  sources.py  tags.py
backend/src/thalimage/core/: hasher.py  metadata.py  scanner.py  thumbnails.py  video.py
backend/src/thalimage/db/: engine.py
backend/src/thalimage/db/migrations/: 001_initial.sql  002_collection_types.sql  003_dynamic_source_presets.sql  004_archival.sql  005_source_preset_constraint.sql  006_tags.sql  007_nsfw.sql  008_settings_table.sql  009_nsfw_trigger_by_name.sql
backend/src/thalimage/services/: collection_service.py  elo_service.py  image_service.py  scan_manager.py  scan_service.py  tag_service.py
backend/tests/: conftest.py  test_api_collections.py  test_api_elo.py  test_api_images.py  test_api_sources.py  test_app.py  test_collection_types.py  test_config.py  test_db.py  test_elo_service.py  test_hasher.py  test_metadata.py  test_nsfw.py  test_scan_manager.py  test_scan_service.py  test_scanner.py  test_tag_service.py  test_thumbnails.py  test_video.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: code-review-2026-06.md  todos.md
docs/agent/: cr_1.md  mvp-plan.md  phases.md  reboot.org
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/: app.html  service-worker.ts
frontend/static/: manifest.webmanifest
(+27 files in other folders)
